Change footer and sidebar

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -34,13 +34,13 @@
             <svg class='icon__cnt'><use xmlns:xlink='http://www.w3.org/1999/xlink' xlink:href='#ei-sc-facebook-icon'></use></svg>
           </div>
         </a>
-        <a title='Share on Pinterest'
+<!--        <a title='Share on Pinterest'
           href="http://pinterest.com/pin/create/button/?url={{ base_path }}{{ post.url }}&description={{ post.title | url_encode }}"
           onclick="window.open(this.href, 'google-share', 'width=580, height=296'); return false;">
           <div class='icon icon--ei-sc-pinterest icon--s c-post-card__share-icon'>
             <svg class='icon__cnt'><use xmlns:xlink='http://www.w3.org/1999/xlink' xlink:href='#ei-sc-pinterest-icon'></use></svg>
           </div>
-        </a>
+        </a> -->
       </div>
 
       <h3 class='c-post-card__title'>
@@ -51,7 +51,8 @@
 
       <div class='c-post-card__meta'>
         <time class='c-post-card__date' datetime='{{ post.date | date_to_xmlschema }}' title='{{ post.date | date: '%d %b %Y' }}'>{{ post.date | date: '%d %b %Y' }}</time>
-        <div class='c-post-card__author'>{{ post.author }}</div>
+<!--    <div class='c-post-card__author'>{{ post.author }}
+        </div> -->
       </div>
     </div>
   </div>
