--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include base_path %}
 
-{% assign author = site.authors[page.author] %}
+<!-- {% assign author = site.authors[page.author] %} -->
 
 {% if page.image %}
   <meta itemprop='og:image' content='{{ base_path }}{{ page.image }}'>
