--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,31 @@
 <footer class='c-footer'>
   <div class='o-grid'>
 
-    <div class='o-grid__col o-grid__col--4-4-s o-grid__col--2-4-m o-grid__col--1-3-l'>
+    <div class='o-grid__col o-grid__col--4-4-s o-grid__col--2-4-m o-grid__col--1-3-l col_footer_left'>
       <p class='u-font-medium'>Tags</p>
 
       <ul class='c-footer-list o-plain-list'>
         {% for tag in site.tags %}
-          <li><a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] }}</a><li>
+          <li>
+            <a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] }}</a>
+          </li>
         {% endfor %}
       </ul>
     </div>
 
     <div class='o-grid__col o-grid__col--4-4-s o-grid__col--2-4-m o-grid__col--1-3-l'>
       <p class='u-font-medium'>Navigation</p>
-
       <ul class='c-footer-list o-plain-list'>
         {% include navigation.html %}
       </ul>
     </div>
 
-    <div class='o-grid__col o-grid__col--4-4-s o-grid__col--2-4-m o-grid__col--1-3-l'>
+<!-- Include Newsletter form
+   <div class='o-grid__col o-grid__col--4-4-s o-grid__col--2-4-m o-grid__col--1-3-l'>
       <p class='u-font-medium'>Newsletter</p>
-
       {% include subscribe-form.html %}
     </div>
+-->
 
     <div class='o-grid__col o-grid__col--full'>
       <div class='c-footer__bottom'>
