--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -2,6 +2,10 @@
   Components > Footer
 \*------------------------------------*/
 
+.col_footer_left {
+  padding-right: 50px;
+}
+
 .c-footer {
   margin-top: double($base-spacing-unit);
   padding: double($base-spacing-unit) 0 double($base-spacing-unit) 0;
@@ -40,17 +44,20 @@
   margin-bottom: $base-spacing-unit;
 
   li {
-    display: block;
-    margin: 0;
     letter-spacing: 0;
     text-transform: capitalize;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 2px 10px;
+    margin: 0 4px 4px 0;
+    background-color: #e5e6ea;
   }
 
   a {
     display: block;
     padding: 0;
     font-size: $font-size-small;
-
+    
     @include attention() {
       color: $color-brand;
 
