--- a/_sass/generic/_reset.scss
+++ b/_sass/generic/_reset.scss
@@ -17,6 +17,19 @@ fieldset, legend {
 }
 
 /**
+ * My modification - CG
+ */
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 40px;
+  padding: 0;
+}
+
+/**
+ * End - CG
+ */
+
+/**
  * Remove trailing margins from nested lists.
  */
 li > {
