--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <ul class='c-footer-list o-plain-list'>
         {% for tag in site.tags %}
           <li>
-            <a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] }}</a>
+            <a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] | replace: "-"," " }}</a>
           </li>
         {% endfor %}
       </ul>
