--- a/_includes/sidebar/widget-tags.html
+++ b/_includes/sidebar/widget-tags.html
@@ -3,7 +3,7 @@
 
   <div class='c-tags'>
     {% for tag in site.tags %}
-      <a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] }}</a>
+      <a href='{{ site.baseurl }}/tag/{{ tag[0] }}'>{{ tag[0] | replace: "-"," "}}</a>
     {% endfor %}
   </div>
 </div>
