--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <head>
 
-
   <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
@@ -32,4 +31,9 @@
         pagination_next_page_number = '{{ paginator.next_page }}',
         pagination_available_pages_number = '{{ paginator.total_pages }}';
   </script>
+
+{% if site.tags != "" %}
+  {% include collect-tags.html %}
+{% endif %}
+
 </head>
