--- a/_sass/elements/_custom.scss
+++ b/_sass/elements/_custom.scss
@@ -7,16 +7,19 @@
   font-size:12px;
 }
 
-.highlight {
+.highlighted {
   background-color: #B70038;
   color: white;
   padding: 5px;
 }
 
-.highlight-box {
+.highlighted-box {
   background-color: #B70038;
   color: white;
   padding: 15px;
   margin: 20px 0px;
 }
 
+li {
+    padding-left: 10px;
+}
